tooltip with modal

--- a/index.html
+++ b/index.html
@@ -86,23 +86,15 @@
                 </div>
                 <div class="modal-body">
                      <form>
-                        <div class="form-row form-check-inline">
-                            <div class="form-check col-4">
-                                <label for="DateandTime" class="col-form-label">Number of Guests</label>
-                            </div>
-                            <div class="form-check col-8">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">1</label>
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">2</label>
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
-                                <label class="form-check-label" for="inlineRadio3">3</label>
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
-                                <label class="form-check-label" for="inlineRadio4">4</label>
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
-                                <label class="form-check-label" for="inlineRadio5">5</label>
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
-                                <label class="form-check-label" for="inlineRadio6">6</label>
+                        <div class="form-group row align-items-center">
+                            <label for="guests" class="col-4 col-form-label">Number of Guests</label>
+                            <div class="col-8">
+                                <label class="radio-inline mr-2"><input class="mr-1" type="radio" name="inlineRadioOptions" value="option1">1</label>
+                                <label class="radio-inline mr-2"><input class="mr-1" type="radio" name="inlineRadioOptions" value="option2">2</label>
+                                <label class="radio-inline mr-2"><input class="mr-1" type="radio" name="inlineRadioOptions" value="option3">3</label>
+                                <label class="radio-inline mr-2"><input class="mr-1" type="radio" name="inlineRadioOptions" value="option4">4</label>
+                                <label class="radio-inline mr-2"><input class="mr-1" type="radio" name="inlineRadioOptions" value="option5">5</label>
+                                <label class="radio-inline mr-2"><input class="mr-1" type="radio" name="inlineRadioOptions" value="option6">6</label>
                             </div>
                         </div>
 
