--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul> 
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                    <span class="fa fa-sign-in"></span> Login</a>
+                    <a role="button" id="login" class="btn">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
                 </span> 
                
             </div>
@@ -151,7 +152,7 @@
                 <div class="col-3 col-sm-3 align-self-center">
                     <div  class="text-center">
                          <span class="navbar-text">
-                            <a data-toggle="modal" data-target="#Reserve_Table" class="btn btn-warning btn-block btn-sm"> Reserve a Table</a>
+                            <a id="reservetable" class="btn btn-warning btn-block btn-sm"> Reserve a Table</a>
                         </span> 
                     </div>
                 </div>
@@ -333,6 +334,17 @@
                 }
             });
         });
+
+        $("#login").click(function () {
+            $('#loginModal').modal('show')
+        });
+
+        $("#reservetable").click(function () {
+            $('#Reserve_Table').modal('show')
+        });
+
+        
+
     </script>
 
 </body>
