--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
         });
 
         $("#login").click(function () {
-            $('#loginModal').modal('show')
+            $('#loginModal').modal('toggle')
         });
 
         $("#reservetable").click(function () {
-            $('#Reserve_Table').modal('show')
+            $('#Reserve_Table').modal('toggle')
         });
 
         
